corpus/edge.txt
================================================================================
boolean
================================================================================

ssl

--------------------------------------------------------------------------------

(source_file
  (boolean_field))

================================================================================
not boolean
================================================================================

not ssl

--------------------------------------------------------------------------------

(source_file
  (not_expression
    (not_operator)
    (boolean_field)))
