corpus/simple.txt
=================
Simple expression
=================

cf.edge.server_port eq 80 or (cf.edge.server_port == 443 && ssl == true)

---

(source_file
  (compound_expression
    (simple_expression
      (number_field)
      (comparison_operator)
      (number)
    )
    (or_operator)
    (group
      (compound_expression
        (simple_expression
          (number_field)
          (comparison_operator)
          (number)
        )
        (and_operator)
        (simple_expression
          (boolean_field)
          (comparison_operator)
          (boolean)
        )
      )
    )
  )
)
