test/corpus/edge.txt
================================================================================
boolean
================================================================================

ssl

--------------------------------------------------------------------------------

(source_file
  (bool_field))

================================================================================
not boolean
================================================================================

not ssl

--------------------------------------------------------------------------------

(source_file
  (not_expression
    (not_operator)
    (bool_field)))

================================================================================
ip list
================================================================================

ip.src in $my_ips

--------------------------------------------------------------------------------

(source_file
  (in_expression
    (ip_field)
    (ip_list)))

================================================================================
managed ip lists
================================================================================

ip.src in $cf.botnetcc or ip.src in $cf.open_proxies

--------------------------------------------------------------------------------

(source_file
  (compound_expression
    (in_expression
      (ip_field)
      (ip_list))
    (in_expression
      (ip_field)
      (ip_list))))
